--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 
-				<div class="logo"><a href="index.html"> CELOL</a></div>
+				<div class="logo"><a href="campestud.github.io/celol"> CELOL</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
