--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 
-				<div class="logo"><a href="campestud.github.io/celol"> CELOL</a></div>
+				<div class="logo"><a href="https://campestud.github.io/celol"> CELOL</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Início</a></li>
+					<li><a href="https://campestud.github.io/celol">Início</a></li>
 					<li><a href="https://campeonato.typeform.com/to/qYIQIV">Inscrição</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
 					<li><a href="generic.html">Encontre um time</a></li>
