--- a/generic.html
+++ b/generic.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-
+	<link rel="shortcut icon" href="images/favicon.png" />
 	<body class="subpage">
 
 		<!-- Header -->
