--- a/index.html
+++ b/index.html
@@ -23,11 +23,23 @@
 					<li><a href="https://campeonato.typeform.com/to/qYIQIV">Inscrição</a></li>
 					<li><a href="https://drive.google.com/file/d/1fiyUpxAPKAKjydsBEKuxZ3sMO7VkwDFx/view?usp=sharing">Regulamento</a></li>
 					<li><a href="generic.html">Encontre um time</a></li>
+					<li><a href="times.html">Times</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section class="banner full">
+				<article>
+					<img src="images/bn7.png" alt="" />
+					<div class="inner">
+						<header>
+							<h2>Times participantes do 1º CELOL</h2>
+							<center><hr size="3px" width="50%" color="white"></center>
+						
+							<a href="times.html" class="button special">Conheça os times</a>
+						</header>
+					</div>
+				</article>
 				<article>
 					<img src="images/bn5.png" alt="" />
 					<div class="inner">
