--- a/generic.html
+++ b/generic.html
@@ -27,6 +27,7 @@
 					<li><a href="https://campeonato.typeform.com/to/qYIQIV">Inscrição</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
 					<li><a href="generic.html">Encontre um time</a></li>
+					<li><a href="times.html">Times</a></li>
 				</ul>
 			</nav>
 
