--- a/times.html
+++ b/times.html
@@ -111,7 +111,7 @@
 							&diams; Rafael "ravaeo"<br>
 							&diams; Kirk "princesa zed"<br>
 							&diams; Carlos "pegasuses00"<br>
-							&diams; Edmilson "Nick não foi informado ainda"<br>
+							&diams; Edmilson "Ed1000sonjr"<br>
 							<br>
 							<br>
 							<b>9º Time - Brotherhood of Mecatronichs - BmCt</b><br>
