--- a/times.html
+++ b/times.html
@@ -47,11 +47,12 @@
 							<p>Olá invocadores! Como vão? Tudo certo?<br>
 							O torneio do CELOL está prestes a iniciar e trouxemos a escalação dos times para que vocês possam estudar o adversário e se preparar para as suas partidas:<br><br>
 							<b>1º Time - Mia Khalifa's BR - MKB</b><br>
-							&diams; Stanrley "Nick não foi informado ainda"<br>
+							&diams; Stanrley "Mia Khalifa BR"<br>
 							&diams; Narciso "narcisolee"<br>
-							&diams; Pedro "Nick não foi informado ainda"<br>
+							&diams; Pedro "klberbambam"<br>
 							&diams; Mayckon "mullersstrike"<br>
-							&diams; Diogo "Nick não foi informado ainda"<br>
+							&diams; Diogo "Dhogo"<br>
+							&diams; Reserva "BorealPick0"<br>
 							<br>
 							<br>
 							<b>2º Time - The Wick's - TWC</b><br>
