--- a/times.html
+++ b/times.html
@@ -46,6 +46,7 @@
 						<div class="content">
 							<p>Olá invocadores! Como vão? Tudo certo?<br>
 							O torneio do CELOL está prestes a iniciar e trouxemos a escalação dos times para que vocês possam estudar o adversário e se preparar para as suas partidas:<br><br>
+							<b><p style="font-color:#3463af">GRUPO A</p></b><br>
 							<b>1º Time - Mia Khalifa's BR - MKB</b><br>
 							&diams; Stanrley "Mia Khalifa BR"<br>
 							&diams; Narciso "narcisolee"<br>
@@ -71,6 +72,7 @@
 							&diams; Luís "BF Rick"<br>
 							<br>
 							<br>
+							<b><p style="font-color:#3463af">GRUPO B</p></b><br>
 							<b>4º Time - PrototypeJ - PTJ</b><br>
 							&diams; Ranulfo "NeoThanatus"<br>
 							&diams; Lucas "Lucere211"<br>
@@ -96,6 +98,7 @@
 							&diams; Marcus "MvsCorreia"<br>
 							<br>
 							<br>
+							<b><p style="font-color:#3463af">GRUPO C</p></b><br>	
 							<b>7º Time - OutPlay Manaus - OPM</b><br>
 							&diams; Kaue "174 aposentado"<br>
 							&diams; Fernando "Fernan712"<br>
