--- a/times.html
+++ b/times.html
@@ -119,7 +119,8 @@
 							<b>9º Time - LOL hoje - LOL</b><br>
 							&diams; Barros "Jungle lixo"<br>
 							&diams; Luan "New Paje"<br>
-							&diams; Moraes "Wandervill"<br>
+							&diams; Moraes "AcreBoy12"<br>
+							&diams; Wandemberg "Wandervill"<br>
 							&diams; Lenon "Lenon Baker"<br>
 							&diams; Marcus "MvsCorreia"<br>
 							<br>
