--- a/index.html
+++ b/index.html
@@ -22,13 +22,29 @@
 					<li><a href=https://campestud.github.io/celol>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/1fiyUpxAPKAKjydsBEKuxZ3sMO7VkwDFx/view?usp=sharing">Regulamento</a></li>
 					<li><a href="times.html">Times</a></li>
+					<li><a href="dia1.html">1° dia</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
+
+
 			<section class="banner full">
+
 				<article>
 					<img src="images/bn7.png" alt="" />
+					<div class="inner">
+						<header>
+							<h2>Veja como foi o primeiro dia do 1° CELOL</h2>
+							<center><hr size="3px" width="50%" color="white"></center>
+						
+							<a href="times.html" class="button special">Resultados</a>
+						</header>
+					</div>
+				</article>
+
+				<article>
+					<img src="images/bn3.png" alt="" />
 					<div class="inner">
 						<header>
 							<h2>Times participantes do 1º CELOL</h2>
