--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CELOL</title>
+		<title>Times do 1° CELOL</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,6 +28,7 @@
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
 					<li><a href="generic.html">Encontre um time</a></li>
 					<li><a href="times.html">Times</a></li>
+					<li><a href="dia1.html">1° dia</a></li>
 				</ul>
 			</nav>
 
