--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>Veja como foi o primeiro dia do 1° CELOL</h2>
 							<center><hr size="3px" width="50%" color="white"></center>
 						
-							<a href="times.html" class="button special">Resultados</a>
+							<a href="dia1.html" class="button special">Resultados</a>
 						</header>
 					</div>
 				</article>
