--- a/dia1.html
+++ b/dia1.html
@@ -166,7 +166,7 @@
 							
 							<br>
 							<br>
-							E isso é tudo, obrigado a todos os times que se inscreveram e participam. Boa sorte aos times restantes em suas partidas e que vença o melhor time ;).
+							E isso é tudo, obrigado a todos os times que se inscreveram e participaram. Boa sorte aos times restantes em suas partidas e que vença o melhor time ;).
 						</div>
 					</div>
 				</div>
