--- a/dia1.html
+++ b/dia1.html
@@ -158,15 +158,21 @@
 								<td colspan="2" align="center">20:00</td>
 								<td colspan="2" align="center">LOL hoje</td>
 								<td colspan="2" align="center">PrototypeJ</td>
-								<td colspan="2" align="center"></td>
-								<td colspan="2" align="center"></td> 
+								<td colspan="2" align="center">LOL hoje</td>
+								<td colspan="2" align="center">18:58</td> 
 							</tr>
 							</table>
 							</center>
 							
 							<br>
 							<br>
-							E isso é tudo, obrigado a todos os times que se inscreveram e participaram. Boa sorte aos times restantes em suas partidas e que vença o melhor time ;).
+							<p>
+							<b>As semifinais foram definidas:</b><br>
+							<br>
+							Será <b>LOL hoje</b> vs <b>I Love Traveco</b> e <b>Teletoons</b> vs <b>OutPlay Manaus</b> 	
+							</p>
+							<br>
+							E isso é tudo, obrigado a todos os times que se inscreveram e participam. Boa sorte aos times restantes em suas partidas e que vença o melhor time ;).
 						</div>
 					</div>
 				</div>
