--- a/times.html
+++ b/times.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CELOL</title>
+		<title>Times do 1° CELOL</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
