--- a/dia1.html
+++ b/dia1.html
@@ -49,7 +49,7 @@
 							Hoje teve o início o 1° CELOL, vamos conferir os resultados dessa primeira etapa (Fase de Grupos)<br><br>
 							
 							<center>
-							<table width="40px" align="center">
+							<table align="center">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo A</td>
 							</tr>
@@ -89,7 +89,7 @@
 							<br>
 
 							<center>
-							<table width="40px" align="center">
+							<table align="center">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo B</td>
 							</tr>
@@ -129,7 +129,7 @@
 							<br>
 
 							<center>
-							<table width="40px" align="center">
+							<table  align="center">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo C</td>
 							</tr>
