--- a/dia1.html
+++ b/dia1.html
@@ -193,7 +193,7 @@
 								<td colspan="2" align="center" bgcolor="#6b9eef">1° Jogo/Tempo</td>
 								<td colspan="2" align="center" bgcolor="#6b9eef">2° Jogo/Tempo</td>
 								<td colspan="2" align="center" bgcolor="#6b9eef">Tempo Geral de Vitória</td>
-								<td colspan="2" align="center" bgcolor="#6b9eef">Tempo Geral de Vitória</td>
+								<td colspan="2" align="center" bgcolor="#6b9eef">Tempo Geral de Derrota</td>
 							</tr>
 							<tr>
 								<td colspan="2" align="center">1° - LOL hoje</td>
