--- a/index.html
+++ b/index.html
@@ -65,15 +65,7 @@
 						<h2>Informações Importantes	</h2>
 					</header>
 					<p align="left"><br> 
-						&diams; O campeonato começa às 15h<br> 
-						&diams; Os jogos podem começar mais cedo ou mais tarde, dependendo do jogo anterior do grupo<br> 
-						&diams; A equipe dispõe de 10 minutos de tolerância para se organizar e estar com os 5 jogadores no lobby de partida, caso contrário sofrerá WO<br> 
-						&diams; As equipes que serão classificadas são:<br> 
-							&nbsp;&nbsp;&nbsp;&nbsp;- Os 1º colocados de cada grupo<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;- O 4º melhor time da fase de grupos, ou seja,  o melhor dentre aqueles que ficaram na segunda colocação, consideração o critério de desempate<br>
-						&diams; O critério de desempate é dado pela equipe que ganhou em menos tempo<br> 
-						&diams; Os jogos começam no dia 20/06<br>
-						&diams; Telefone p/ Contato: (92) 99102-5262</p>
+						Campeonato de X1 em breve...<br>
 							
 					</div>
 				</div>
