--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
 					</div>
 				</div>
 			</section>
+	
+	<!-- Two -->
+			<section id="two" class="wrapper style2">
+				<div class="inner">
+					<header class="align-center">
+						<p>Todas as publicações sobre o CELOL</p>
+						<h2>Publicações Anteriores</h2>
+					</header>
+				</div>
+			</section>
 
 
 		<!-- Footer -->
