--- a/dia1.html
+++ b/dia1.html
@@ -274,7 +274,7 @@
 
 							<br><br>Analisamos com cuidado o caso de desempate entre os 4º, 5º e 6º colocado, pois o Time DSP havia ganho uma partida por W.O., logo não tendo tempo de soma de vitórias (NA). Por conta disso, a sua colocação foi desempatada com os outros colocados a partir da soma do tempo de derrota. O time DSP teve a menor soma de tempo das derrotas, por isso ficou atrás dos outros. Enquanto que o desempate entre ILT e MKB fora realizado normalmente, com a menor Soma de tempo das Vitórias.<p>
 							<br>
-							E isso é tudo, obrigado a todos os times que se inscreveram e participam. Boa sorte aos times restantes em suas partidas e que vença o melhor time ;).
+							E isso é tudo, obrigado a todos os times que se inscreveram e participaram. Boa sorte aos times restantes em suas partidas e que vença o melhor time ;).
 						</div>
 					</div>
 				</div>
