--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
 					</header>
 				</div>
 			</section>
+	
+	<!-- Three -->
+			<section id="three" class="wrapper style2">
+				<div class="inner">
+					<header class="align-center">
+						<p class="special">Conheça os integrantes da OPM</p>
+						<h2>Sobre nós	</h2>
+					</header>
+					<p align="left"><br> 
+						Grupo fundado na aula de matemática...<br>
+							
+					</div>
+				</div>
+			</section>
 
 
 		<!-- Footer -->
