--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 				</div>
 			</section>
 	
-	<!-- Three -->
+	<!-- Four -->
 			<section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
-						<p class="special">Conheça os integrantes da OPM</p>
-						<h2>Sobre nós	</h2>
+						<p class="special">Saiba mais sobre a OPM</p>
+						<h2>Sobre nós</h2>
 					</header>
 					<p align="left"><br> 
 						Grupo fundado na aula de matemática...<br>
