--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p class="special">Saiba mais sobre a OPM</p>
-						<h2>Sobre nós</h2>
+						<h2>Sobre Nós</h2>
 					</header>
 					<p align="left"><br> 
 						Grupo fundado na aula de matemática...<br>
