--- a/index.html
+++ b/index.html
@@ -82,19 +82,17 @@
 			</section>
 	
 	<!-- Four -->
-			<section id="three" class="wrapper style2">
+	
+		<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p class="special">Saiba mais sobre a OPM</p>
+						<p>Saiba mais sobre a OPM</p>
 						<h2>Sobre Nós</h2>
 					</header>
-					<p align="left"><br> 
-						Grupo fundado na aula de matemática...<br>
-							
-					</div>
 				</div>
 			</section>
-
+	
+			
 
 		<!-- Footer -->
 			<footer id="footer">
