--- a/dia1.html
+++ b/dia1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>1° dia do CELOL</title>
+		<title>1° dia do 1° CELOL</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href=https://campestud.github.io/celol>CELOL</span></a></div>
+				<div class="logo"><a href=https://campestud.github.io/celol>CELOL</span></a> by OPM</div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -26,7 +26,8 @@
 					<li><a href=https://campestud.github.io/celol>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
 					<li><a href="times.html">Times</a></li>
-					<li><a href="dia1.html">1° dia</a></li>
+					<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
+					<li><a href="campeao.html">Final - 1° CELOL</a></li>
 				</ul>
 			</nav>
 
@@ -34,8 +35,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Confira como foi o primeiro dia 1° CELOL</p>
-						<h2>Resultado do 1° dia do CELOL</h2>
+						<p>Confira como foi o primeiro dia do 1° CELOL</p>
+						<h2>Resultado do 1° dia do 1° CELOL</h2>
 					</header>
 				</div>
 			</section>
