--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Times do 1° CELOL</title>
+		<title>Formação de Times</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href=https://campestud.github.io/celol>CELOL</span></a></div>
+				<div class="logo"><a href=https://campestud.github.io/celol>CELOL</span></a> by OPM</div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -28,7 +28,8 @@
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
 					<li><a href="generic.html">Encontre um time</a></li>
 					<li><a href="times.html">Times</a></li>
-					<li><a href="dia1.html">1° dia</a></li>
+						<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
+					<li><a href="campeao.html">Final - 1° CELOL</a></li>
 				</ul>
 			</nav>
 
