--- a/times.html
+++ b/times.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href=https://campestud.github.io/celol>CELOL</span></a></div>
+				<div class="logo"><a href=https://campestud.github.io/celol>CELOL</span></a> by OPM</div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -26,6 +26,8 @@
 					<li><a href=https://campestud.github.io/celol>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
 					<li><a href="times.html">Times</a></li>
+						<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
+					<li><a href="campeao.html">Final - 1° CELOL</a></li>
 				</ul>
 			</nav>
 
