--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul class="links">
 					<li><a href=https://campestud.github.io/celol>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/1fiyUpxAPKAKjydsBEKuxZ3sMO7VkwDFx/view?usp=sharing">Regulamento</a></li>
-					<li><a href="times.html">Times</a></li>
+					<li><a href="times.html">Times - 1° CELOL</a></li>
 						<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
 					<li><a href="campeao.html">Final - 1° CELOL</a></li>
 				</ul>
