--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<h2>Veja como terminou o 1° CELOL</h2>
 							<center><hr size="3px" width="50%" color="white"></center>
 						
-							<a href="dia1.html" class="button special">Resultados</a>
+							<a href="campeao.html" class="button special">Resultados</a>
 						</header>
 					</div>
 				</article>
