--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 
-				<div class="logo"><a href=https://campestud.github.io/celol> CELOL</a> by OPM</div>
+				<div class="logo"><a href=https://https://opmteam.github.io/celol/> CELOL</a> by OPM</div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href=https://campestud.github.io/celol>Início</a></li>
+					<li><a href=https://https://opmteam.github.io/celol/>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/1fiyUpxAPKAKjydsBEKuxZ3sMO7VkwDFx/view?usp=sharing">Regulamento</a></li>
 					<li><a href="times.html">Times - 1° CELOL</a></li>
 						<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
@@ -182,26 +182,6 @@
 							</div>
 						</div>
 
-					</div>
-				</div>
-			</section>
-	
-	<!-- Four -->
-	
-		<section id="two" class="wrapper style3">
-				<div class="inner">
-					<header class="align-center">
-						<p>Saiba mais sobre a OPM</p>
-						<h2>Sobre Nós</h2>
-					</header>
-				</div>
-			</section>
-	<!-- Three -->
-			<section id="three" class="wrapper style2">
-				<div class="inner">
-					<p align="left"><br> 
-						Em breve...<br>
-							
 					</div>
 				</div>
 			</section>
