--- a/campeao.html
+++ b/campeao.html
@@ -16,14 +16,14 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href=https://campestud.github.io/celol>CELOL</span></a> by OPM</div>
+				<div class="logo"><a href=https://opmteam.github.io/celol/>CELOL</span></a> by OPM</div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href=https://campestud.github.io/celol>Início</a></li>
+					<li><a href=https://opmteam.github.io/celol/>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
 					<li><a href="times.html">Times - 1° CELOL</a></li>
 						<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
