--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 				<div class="container">
 					<ul class="icons">
 						<li><a href="https://www.instagram.com/celol_2019/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="mailto: gamestud@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="mailto: omp.inc19@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
