--- a/dia1.html
+++ b/dia1.html
@@ -50,7 +50,7 @@
 							Hoje teve o início o 1° CELOL, vamos conferir os resultados dessa primeira etapa (Fase de Grupos)<br><br>
 							
 							<center>
-							<table  align="center">
+							<table  align="center" width="100%">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo A</td>
 							</tr>
