--- a/dia1.html
+++ b/dia1.html
@@ -90,7 +90,7 @@
 							<br>
 
 							<center>
-							<table align="center">
+							<table align="center" style="width:100%">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo B</td>
 							</tr>
@@ -130,7 +130,7 @@
 							<br>
 
 							<center>
-							<table  align="center">
+							<table  align="center" style="width:100%">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo C</td>
 							</tr>
@@ -184,7 +184,7 @@
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.	Menor Soma de tempo das Vitórias;<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.	Maior Soma de tempo das Derrotas;<br>
 							<br>
-							<table  align="center">
+							<table  align="center" style="width:100%">
 							<tr>
 								<td colspan="12" align="center" bgcolor="#6b9eef">Tabela Geral</td>
 							</tr>
