--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 
-				<div class="logo"><a href=https://https://opmteam.github.io/celol/> CELOL</a> by OPM</div>
+				<div class="logo"><a href=https://opmteam.github.io/celol/> CELOL</a> by OPM</div>
 				<a href="#menu">Menu</a>
 			</header>
 
