--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href=https://https://opmteam.github.io/celol/>Início</a></li>
+					<li><a href=https://opmteam.github.io/celol/>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/1fiyUpxAPKAKjydsBEKuxZ3sMO7VkwDFx/view?usp=sharing">Regulamento</a></li>
 					<li><a href="times.html">Times - 1° CELOL</a></li>
 						<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
@@ -32,7 +32,18 @@
 
 			<section class="banner full">
 
-
+			<article>
+					<img src="images/img5.png" alt="" />
+					<div class="inner">
+						<header>
+							<h2>Estão abertas as inscrições pro 2° CELOL</h2>
+							<center><hr size="3px" width="50%" color="white"></center>
+						
+							<a href="https://campeonato.typeform.com/to/sC0eKH" class="button special">Inscreva-se</a>
+						</header>
+					</div>
+				</article>
+				
 				<article>
 					<img src="images/bn6.png" alt="" />
 					<div class="inner">
