--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section class="banner full">
 
 			<article>
-					<img src="images/img5.png" alt="" />
+					<img src="images/bn6.png" alt="" />
 					<div class="inner">
 						<header>
 							<h2>Estão abertas as inscrições pro 2° CELOL</h2>
