--- a/2celol.html
+++ b/2celol.html
@@ -151,7 +151,7 @@
 							&diams; Pedro "Hecarinee"<br>
 							<br>
 							<br>
-							<b>6º Time - Pepega Team - PGGT</b><br> 
+							<b>6º Time - Pepega Team - PPGT</b><br> 
 							&diams; Sérgio "Adoro Loirinha"<br>
 							&diams; Alexandre "Adoro Ruivinha"<br>
 							&diams; Christian "MainMasterYi1"<br>
