--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<h2>Informações Importantes	</h2>
 					</header>
 					<p align="left"><br> 
-						Campeonato de X1 em breve...<br>
+						Os jogos começam nesse fim de semana<br>
 							
 					</div>
 				</div>
@@ -118,7 +118,7 @@
 <div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/img2.png" alt="" />
+									<img src="images/img5.png" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -179,7 +179,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/img3.png" alt="" />
+									<img src="images/img6.png" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
