--- a/allposts.html
+++ b/allposts.html
@@ -21,9 +21,9 @@
 				<ul class="links">
 					<li><a href=https://opmteam.github.io/celol/>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
-					<li><a href="2celol.html">2° CELOL</a></li><li><a href="times.html">Times - 1° CELOL</a></li>
-					<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
-					<li><a href="campeao.html">Final - 1° CELOL</a></li>
+					<li><a href="2celol_grup.html">Fase de Pontos - 2° CELOL</a></li>
+					<li><a href="2celol.html">2° CELOL</a></li>
+					
 				</ul>
 			</nav>
 
@@ -42,6 +42,25 @@
 				<div class="inner">
 					<div class="grid-style">
 
+
+
+
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<img src="images/img7.png" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>Saiba tudo sobre a fase de pontos</p>
+										<h2> Fase de Pontos - 2° CELOL</h2>
+									</header>
+									<footer class="align-center">
+										<a href="2celol_grup.html" class="button alt">Leia mais</a>
+									</footer>
+								</div>
+							</div>
+						</div>
 
 
 						<div>
