--- a/generic.html
+++ b/generic.html
@@ -22,10 +22,8 @@
 					<li><a href=https://opmteam.github.io/celol/>Início</a></li>
 					<li><a href="https://campeonato.typeform.com/to/qYIQIV">Inscrição</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
-				<li><a href="2celol.html">2° CELOL</a></li>
-					<li><a href="times.html">Times - 1° CELOL</a></li>
-						<li><a href="dia1.html">1° dia - 1° CELOL</a></li>
-					<li><a href="campeao.html">Final - 1° CELOL</a></li>
+				<li><a href="2celol_grup.html">Fase de Pontos - 2° CELOL</a></li>					<li><a href="2celol.html">2° CELOL</a></li>
+					
 				</ul>
 			</nav>
 
