--- a/dia1.html
+++ b/dia1.html
@@ -46,7 +46,7 @@
 							Hoje teve o início o 1° CELOL, vamos conferir os resultados dessa primeira etapa (Fase de Grupos)<br><br>
 							
 							<center>
-							<table  align="center" style="width:60% ;font-size:10px;">
+							<table  align="center" style="width:80%;">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo A</td>
 							</tr>
@@ -86,7 +86,7 @@
 							<br>
 
 							<center>
-							<table align="center" style="width:60% ;font-size:10px;">
+							<table align="center" style="width:80% ;">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo B</td>
 							</tr>
@@ -126,7 +126,7 @@
 							<br>
 
 							<center>
-							<table  align="center" style="width:60% ;font-size:10px;">
+							<table  align="center" style="width:80% ;">
 							<tr>
 								<td colspan="10" align="center" bgcolor="#6b9eef">Grupo C</td>
 							</tr>
@@ -180,7 +180,7 @@
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.	Menor Soma de tempo das Vitórias;<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.	Maior Soma de tempo das Derrotas;<br>
 							<br>
-							<table  align="center" style="width:50% ;font-size:8px;">
+							<table  align="center" style="width:80% ;">
 							<tr>
 								<td colspan="12" align="center" bgcolor="#6b9eef">Tabela Geral</td>
 							</tr>
