--- a/2celol.html
+++ b/2celol.html
@@ -245,8 +245,8 @@
 							<b>1º Time - OutPlay Manaus - OPM</b><br>
 							&diams; Kaue "174 aposentado"<br>
 							&diams; Fernando "Fernan712"<br>
-							&diams; Eduardo "EduZC"<br>
-							&diams; Pedro "Sensei Sano"<br>
+							&diams; Eduardo "OPM Zucolo"<br>
+							&diams; Pedro "OPM Sedex"<br>
 							&diams; Jean "OPM Kirito"<br>
 							<br>
 							<br>
@@ -290,7 +290,7 @@
 							<b>6º Time - Pepega Team - PPGT</b><br> 
 							&diams; Sérgio "Adoro Loirinha"<br>
 							&diams; Alexandre "Adoro Ruivinha"<br>
-							&diams; Christian "MainMasterYi1"<br>
+							&diams; Christian "weee"<br>
 							&diams; Renan "RD785"<br>
 							&diams; Luís "BF Rick"<br>
 							<br>
