--- a/2celol.html
+++ b/2celol.html
@@ -20,6 +20,7 @@
 				<ul class="links">
 					<li><a href=https://opmteam.github.io/celol/>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
+					<li><a href="2celol_semifi.html">Semifinal - 2° CELOL</a></li>
 					<li><a href="2celol_grup.html">Fase de Pontos - 2° CELOL</a></li>
 					<li><a href="2celol.html">2° CELOL</a></li>
 					
