--- a/allposts.html
+++ b/allposts.html
@@ -21,6 +21,7 @@
 				<ul class="links">
 					<li><a href=https://opmteam.github.io/celol/>Início</a></li>
 					<li><a href="https://drive.google.com/file/d/18J1Htw4wTPTEnsPR4rt7kKB0CEvgw8QU/view?usp=sharing">Regulamento</a></li>
+					<li><a href="2celol_semifi.html">Semifinal - 2° CELOL</a></li>
 					<li><a href="2celol_grup.html">Fase de Pontos - 2° CELOL</a></li>
 					<li><a href="2celol.html">2° CELOL</a></li>
 					
@@ -43,6 +44,22 @@
 					<div class="grid-style">
 
 
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<img src="images/img8.png" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>Saiba tudo sobre a semifinal</p>
+										<h2>Semifinal - 2° CELOL</h2>
+									</header>
+									<footer class="align-center">
+										<a href="2celol_semifi.html" class="button alt">Leia mais</a>
+									</footer>
+								</div>
+							</div>
+						</div>
 
 
 						<div>
