--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<h2>Informações Importantes	</h2>
 					</header>
 					<p align="left"><br> 
-						Os jogos começam nesse fim de semana<br>
+						O campeonato acaba nesse fim de semana<br>
 							
 					</div>
 				</div>
