--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Todas as publicações sobre o CELOL</p>
+						<p>Últimas publicações sobre o CELOL</p>
 						<h2>Publicações Anteriores</h2>
 					</header>
 				</div>
